fix: path pictures, flex, overflow

--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -4,4 +4,5 @@
   padding: 90px 0;
   background-color: #1f1f1f;
   z-index: 1;
+  overflow: hidden;
 }
